# penulis

./: CMakeLists.txt  README.md
include/: main.h
include/component/: subWin.h  textArea.h
include/input/: input.h  inputChar.h  inputNormal.h  inputShift.h
include/util/: def.h  file.h  font.h  lib.h  list.h  project.h  ui.h  util.h  x.h
src/: main.c
src/input/: input.c  inputChar.c  inputNormal.c  inputShift.c
src/util/: file.c  font.c  list.c  project.c  util.c  x.c
